src/objects/ints__Equipment__c.object
<CustomObject>
    <fields>
        <fullName>ints__Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Manufacturer_Code__c</fullName>
        <label>Manufacturer Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Model_Year__c</fullName>
        <label>Model Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Style__c</fullName>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__UVC__c</fullName>
        <label>Universal Vehicle Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Vehicle_Id__c</fullName>
        <label>Vehicle Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Vehicle_Identification_Number__c</fullName>
        <label>Vehicle Identification Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{0000000000}</displayFormat>
        <label>Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>